# ese5190-2022-lab2b-esp

./: README.md
lab/: CMakeLists.txt  README.md
lab/01_registers/: CMakeLists.txt  README.md  flashlight_reg.c
lab/02_repl/: README.md  register_repl.c
lab/03_sequencer/: README.md  sequencer.c
lab/04_slow_motion/: README.md
lab/05_i2c_traffic/: README.md
lab/06_pioscope/: CMakeLists.txt  README.md  logic_analyser.c
lab/07_pio_sequencer/: CMakeLists.txt  README.md  main.c  piosequencer.c  piosequencer.h
lab/08_adps_protocol/: APDS9960.c  README.md
lab/09_lab_on_a_chip/: README.md  main.c
lab/10_protoboard/: README.md
pyserial terminal/: README.md  serial_terminal.py  serial_terminal.sh  user_config.py
pyserial terminal/logs/: 20221115-2159hrs34sec_serialdata.txt  20221115-2201hrs29sec_serialdata.txt  20221115-2206hrs07sec_serialdata.txt  20221115-2207hrs17sec_serialdata.txt  20221115-2312hrs10sec_serialdata.txt  20221115-2326hrs16sec_serialdata.txt  datai2c.py  dataneopixel.py
